module12/istio-httpserver.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver-gateway
  namespace: cncamp
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpserver
  namespace: cncamp
spec:
  gateways:
  - httpserver-gateway
  hosts:
  - '*'
  http:
  - route:
    - destination:
        host: httpserver-service.cncamp.svc.cluster.local 
        port:
          number: 80
